# gpig

./: .env.sample  Cargo.toml  README.md  overview.md
.plans/: 00_doc_git2.md  01_git_management_app.md  02_fix_ui_freeze.md  03_search_path.md  04_repo_dropdown.md  05_fix_file_diff_polling.md  06_type_auto_suggest.md  07_fix_text_input_menu_suggest.md  08_side_by_side_diff.md  09_local_remote_mode.md  10_async_panel_loading.md  11_fix_slow_loading.md
docs/: doc_git2.md  how_to_Gpui_work.md  how_to_Gpui_work_thai.md  workspace.md
examples/: emit_name.rs  input_player_transfer.rs  popup_modal.rs  show_count.rs  use_state_counter.rs  zed_workspace.rs
milestone/: 2026-02-01--0002.md
src/: actions.rs  branch.rs  color.rs  commit.rs  diff_viewer.rs  garph.rs  history_oid.rs  lane.rs  lib.rs  main.rs  menu.rs  panel_loader.rs  path_bar.rs  repo_picker.rs  repo_scanner.rs  status_bar.rs  status_panel.rs  suggest.rs  text_input.rs  title.rs  workspace.rs
src/entities/: commit.rs  edge.rs  garph.rs  lane.rs  mod.rs
tests/: test_lance.rs
